--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Office small talk simulator" startnode="1" creator="Twine" creator-version="2.3.9" ifid="1420B9F4-8FEE-4EE8-A1A7-8642BEC186EB" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Me stopping by your desk." tags="" position="457.5,86.5" size="100,100">I&#39;ve been sitting at my desk for like 45 minutes. I gotta get up and walk around. You know what I mean?
+<tw-storydata name="Office small talk simulator" startnode="1" creator="Twine" creator-version="2.3.9" ifid="1420B9F4-8FEE-4EE8-A1A7-8642BEC186EB" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Me stopping by your desk." tags="" position="457.5,86.5" size="100,100">
+**Click on the links in blue to navigate your way through the story.**
+
+
+I&#39;ve been sitting at my desk for like 45 minutes. I gotta get up and walk around. You know what I mean?
 How&#39;s life?
 
 Do you want to talk about..
@@ -22,7 +26,7 @@ Do you want to talk about..
 [[No, I&#39;ve been meaning to]]
 [[I finished it.]]
 [[I am more into &quot;The Office&quot;]]
-</tw-passagedata><tw-passagedata pid="3" name="food" tags="" position="628.5,242.5" size="100,100">I started making sauerkraut. You take cababge and you just smash it up with some salt and leave it in a jar covered with a cloth for two weeks and then I move it to the fridge. I check on it every ten minutes but that is just becuase I am an impatient person.
+</tw-passagedata><tw-passagedata pid="3" name="food" tags="" position="628.5,242.5" size="100,100">I started making sauerkraut. You take cabbage and you just smash it up with some salt and leave it in a jar covered with a cloth for two weeks and then I move it to the fridge. I check on it every ten minutes but that is just becuase I am an impatient person.
 [[What do you do with sauerkraut?]]
 </tw-passagedata><tw-passagedata pid="4" name="I am more into &quot;The Office&quot;" tags="" position="1128.5,175.5" size="100,100">I watched all of &quot;The Office.&quot; I&#39;m way more into Michael and Holly than Pam and Jim. Pam and Jim don&#39;t really consult each other when they make big decisions. He bought that house wihout telling her. Also, that house would be like 1.2 million dollars in my neighborhood which is crazy. The realator would be like &quot;there is a crack in the foundation and it&#39;s haunted&quot; and it would still sell for 75K over the list price.  
 
@@ -82,7 +86,7 @@ This was totally just the right amount of drama.
 Have you been to Hawaii?
 
 [[Yes]]
-[[No]]</tw-passagedata><tw-passagedata pid="17" name="La Liga" tags="" position="192.5,281.5" size="100,100">Mesi! 
+[[No]]</tw-passagedata><tw-passagedata pid="17" name="La Liga" tags="" position="192.5,281.5" size="100,100">Messi! 
 That&#39;s all I have.
 
 Did you ever watch &quot;Last Chance U&quot; on Netflix?
@@ -120,7 +124,7 @@ Great street tacos.
 
 I bought some pickled cauliflower from a man on the street.
 
-[[I am a bit of a street food connoisseur myself]]</tw-passagedata><tw-passagedata pid="26" name="That sounds like it&#39;s good for your gut" tags="" position="1550.5,242.5" size="100,100">Totally.And when you beltch you get to relive the enitre experience but with a new perspective of the wisdom you&#39;ve aquired in the intrim. It&#39;s like sending yourself a postcard and then getting it in a few days.Â I&#39;ve been watching &quot;Queens Gambit. 
+[[I am a bit of a street food connoisseur myself]]</tw-passagedata><tw-passagedata pid="26" name="That sounds like it&#39;s good for your gut" tags="" position="1550.5,242.5" size="100,100">Totally.And when you belch you get to relive the enitre experience but with a new perspective of the wisdom you&#39;ve aquired in the intrim. It&#39;s like sending yourself a postcard and then getting it in a few days.Â I&#39;ve been watching Queens Gambit. 
 
 Have you seen it?
 
@@ -132,7 +136,7 @@ It is like Adam Sandler playing dodgeball against those elementary school kids i
 Did you ever watch &quot;Last Chance U&quot; on Netflix?
 
 [[That is my jam!]]
-[[I am more into &quot;The Office&quot;]]</tw-passagedata><tw-passagedata pid="28" name="What do you do with sauerkraut?" tags="" position="601.5,422.5" size="100,100">I make a beet ruben with roasted beets, swiss cheese, Russian dressing and sauerkraut on grilled sourdough.
+[[I am more into &quot;The Office&quot;]]</tw-passagedata><tw-passagedata pid="28" name="What do you do with sauerkraut?" tags="" position="601.5,422.5" size="100,100">I make a beet ruben sandwhich with roasted beets, swiss cheese, Russian dressing and sauerkraut on grilled sourdough.
 
 [[I&#39;m into kimchi. Have you had kogi?]]</tw-passagedata><tw-passagedata pid="29" name="If you&#39;re not able to enjoy it, then you probably have a problem enjoying things in general" tags="" position="225,1147.5" size="100,100">I&#39;ve never been to Hawaii but I feel like it&#39;s hard when you have this moment when the sun is setting and you&#39;re with the people you love, the warm breeze is blowingÂ and the ocean is gently lapping at your toes and you&#39;re thinking &quot;what is the appropriate level of happiness for this moment?&quot; Life isn&#39;t going to get substantially better than this. Should I be content? Should I be ecstatic? This moment is going to end and I am going to have to return to my regular life at some point.
 
