--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Do you want to hear my take on &quot;Groundhogs Day?&quot;
 </tw-passagedata><tw-passagedata pid="45" name="I have not seen Quiet Place if you start talking about it I will cover my ears and hum loudly" tags="" position="1124.5,473.5" size="100,100">Totally fair. 
 Do you want to hear my take on &quot;Groundhogs Day?&quot;
 [[Hit me]]
-</tw-passagedata><tw-passagedata pid="46" name="Hit me" tags="" position="1277.5,749.5" size="100,100">It&#39;s a movie about privelege. It&#39;s about a guy who gets an infinte number of chances to get things right. He fails and fails and fails and gets to start over again and again until he finally gets things right.  
+</tw-passagedata><tw-passagedata pid="46" name="Hit me" tags="" position="1277.5,749.5" size="100,100">It&#39;s a movie about privilege. It&#39;s about a guy who gets an infinte number of chances to get things right. He fails and fails and fails and gets to start over again and again until he finally gets things right.  
 
 [[Deep]]
 </tw-passagedata><tw-passagedata pid="47" name="Deep" tags="" position="1277.5,899.5" size="100,100">For real.
