--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ The end.
 
 [[Low stakes drama is where it&#39;s at]]
 </tw-passagedata><tw-passagedata pid="14" name="I finished it." tags="" position="1086.5,905.5" size="100,100">I really loved it. They are not afraid to show off the 1950&#39;s production design! They are like &quot;We paid for this. Let&#39;s see it on screen!&quot; There are all of these tracking shots of her just walking into a building and you see the building and a bunch of people in period costume as the music plays.Â 
-I also really liked that this guys was like &quot;I&#39;m not playing in the tournament. I was sent as a reporter from chess magazine to cover the tournament.&quot; Totally a different media landscape back then.Â 
-I was worried that it was going to be like the &quot;One Flew Over the Cookoo&#39;s Nest&quot; spin-off that is also a similar time period and a little stylized. The trailer for that gave me nightmares.
+I also really liked that this guy was like &quot;I&#39;m not playing in the tournament. I was sent as a reporter from a chess magazine to cover the tournament.&quot; Totally a different media landscape back then.Â 
+I was worried that it was going to be like the &quot;One Flew Over the Cuckoo&#39;s Nest&quot; spin-off that is also a similar time period and a little stylized. The trailer for that gave me nightmares.
 This was totally just the right amount of drama.
 
 [[Low stakes drama is where it&#39;s at]]</tw-passagedata><tw-passagedata pid="15" name="I&#39;m into Soccer" tags="" position="120.5,139.5" size="100,100">[[Premier League]]? [[La Liga]]? [[MLS]]?
