--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@ Do you want to talk about..
 [[I am more into &quot;The Office&quot;]]
 </tw-passagedata><tw-passagedata pid="3" name="food" tags="" position="628.5,242.5" size="100,100">I started making sauerkraut. You take cabbage and you just smash it up with some salt and leave it in a jar covered with a cloth for two weeks and then I move it to the fridge. I check on it every ten minutes but that is just becuase I am an impatient person.
 [[What do you do with sauerkraut?]]
-</tw-passagedata><tw-passagedata pid="4" name="I am more into &quot;The Office&quot;" tags="" position="1128.5,175.5" size="100,100">I watched all of &quot;The Office.&quot; I&#39;m way more into Michael and Holly than Pam and Jim. Pam and Jim don&#39;t really consult each other when they make big decisions. He bought that house wihout telling her. Also, that house would be like 1.2 million dollars in my neighborhood which is crazy. The realator would be like &quot;there is a crack in the foundation and it&#39;s haunted&quot; and it would still sell for 75K over the list price.  
+</tw-passagedata><tw-passagedata pid="4" name="I am more into &quot;The Office&quot;" tags="" position="1128.5,175.5" size="100,100">I watched all of &quot;The Office.&quot; I&#39;m way more into Michael and Holly than Pam and Jim. Pam and Jim don&#39;t really consult each other when they make big decisions. He bought that house wihout telling her. Also, that house would be like 1.2 million dollars in my neighborhood which is crazy. The realtor would be like &quot;there is a crack in the foundation and it&#39;s haunted&quot; and it would still sell for 75K over the list price.  
 
 
 Are you more into
  [[Dwight and Angelea]] or [[Phyliss and Bob Vance of Vance refrigeration]]
-</tw-passagedata><tw-passagedata pid="5" name="Dwight and Angelea" tags="" position="1017.5,294.5" size="100,100">I think the Dwight character might have some problematic political beliefs if he existed in this moment (although the actor seems nice in real life.) I think they are really good at comunicating what they are looking for to one another. It is kind of crazy that she was with Andy (unless I dreamt that.) Andy and Dwight seem pretty differnt. At the same time you don&#39;t have to have a type and you can like whatever or whomever you want and you are free to change your mind at any moment. I think Andy is kind of a sad charater. Also when I think about Jim I think about &quot;The Quiet Place.&quot; Don&#39;t get me started on &quot;The Quiet Place.&quot;
+</tw-passagedata><tw-passagedata pid="5" name="Dwight and Angelea" tags="" position="1017.5,294.5" size="100,100">I think the Dwight character might have some problematic political beliefs if he existed in this moment (although the actor seems nice in real life.) I think they are really good at communicating what they are looking for to one another. It is kind of crazy that she was with Andy (unless I dreamt that.) Andy and Dwight seem pretty differnt. At the same time you don&#39;t have to have a type and you can like whatever or whomever you want and you are free to change your mind at any moment. I think Andy is kind of a sad character. Also when I think about Jim I think about &quot;The Quiet Place.&quot; Don&#39;t get me started on &quot;The Quiet Place.&quot;
 
 [[Oh, I want you to get you started on Quiet Place]]
 [[I have not seen Quiet Place if you start talking about it I will cover my ears and hum loudly]]
 </tw-passagedata><tw-passagedata pid="6" name="Phyliss and Bob Vance of Vance refrigeration" tags="" position="1381.5,223.5" size="100,100">I like that he always sends her a ton of presents for Valentine&#39;s day.
 
 
-Do you want to hear my take on &quot;Groundhogs Day?&quot;
+Do you want to hear my take on &quot;Groundhog Day?&quot;
 [[Hit me]]</tw-passagedata><tw-passagedata pid="7" name="I&#39;m into kimchi. Have you had kogi?" tags="" position="987.5,45.5" size="100,100">Kogi is really good. I wasn&#39;t planning on getting it. I just walked past it while it was opening and there was no line so I was like &quot;when is there not a line? I should get it.&quot; It&#39;s pretty delicious, kind of how you would imagine Korean food wrapped in a burritto.
 I&#39;ve been getting into pickling.
 
@@ -51,7 +51,7 @@ I&#39;ve been getting into pickling.
 [[A hot dog wrapped in bacon with mayo, mustard, ketchup, grilled onions, and a pepper]] 
 [[Street corn with cojita cheese]]
 [[I was at a bar, back when there was such a thing as a bar, and this person walked in with tamales and I bought sweet one with raisins and pineapple in it]] 
-[[Cut up fruit with lime and tajin]]</tw-passagedata><tw-passagedata pid="9" name="What can you pickle?" tags="" position="1257.5,83.5" size="100,100">What can&#39;t you pickle? I pickle onions like you get at a taco truck. I also make sauerkraut. You just smash up some cabage with some salt and then just leave it in a jar with a cloth over it so it can breathe.
+[[Cut up fruit with lime and tajin]]</tw-passagedata><tw-passagedata pid="9" name="What can you pickle?" tags="" position="1257.5,83.5" size="100,100">What can&#39;t you pickle? I pickle onions like you get at a taco truck. I also make sauerkraut. You just smash up some cabbage with some salt and then just leave it in a jar with a cloth over it so it can breathe.
 
 [[How long does it take?]]
 [[That sounds like it&#39;s good for your gut]]</tw-passagedata><tw-passagedata pid="10" name="A hot dog wrapped in bacon with mayo, mustard, ketchup, grilled onions, and a pepper" tags="" position="607.5,728.5" size="100,100">Too good. I have to go. I want to talk to you about non-dairy creamer flavors but not right now.
@@ -64,14 +64,14 @@ I have to go. I want to talk to you about non-dairy creamer flavors but not righ
 
 The end.
 
-[[Start over]]</tw-passagedata><tw-passagedata pid="12" name="Cut up fruit with lime and tajin" tags="" position="665.5,844.5" size="100,100">Spicy! Refreshing! Spicy! Refreshing! Spicy! Refreshing! Done. It&#39;s very hard for me to stop eating that, although I am not super into the jicima. I like everything else.
+[[Start over]]</tw-passagedata><tw-passagedata pid="12" name="Cut up fruit with lime and tajin" tags="" position="665.5,844.5" size="100,100">Spicy! Refreshing! Spicy! Refreshing! Spicy! Refreshing! Done. It&#39;s very hard for me to stop eating that, although I am not super into the jicama. I like everything else.
 My kids have tiny tajin bottles and will take them out and just sprinkle straight tajin into their mouths.
 
 Too good. I have to go. I want to talk to you about non-dairy creamer flavors but not right now.
 
 The end.
 
-[[Start over]]</tw-passagedata><tw-passagedata pid="13" name="No, I&#39;ve been meaning to" tags="" position="907.5,940.5" size="100,100">I really liked it. It has just the right level of drama for me. In the begining, she&#39;s in this orphange and she goes down to the beasment and meets this janitor and I was like &quot;Oh, no this scary janitor dude is going to do something terrible.&quot; He teaches her chess!!! She is in this orphanage and everyone is just kind of nice to her. They do give her downers but the problem is that they stop giving her downers.
+[[Start over]]</tw-passagedata><tw-passagedata pid="13" name="No, I&#39;ve been meaning to" tags="" position="907.5,940.5" size="100,100">I really liked it. It has just the right level of drama for me. In the begining, she&#39;s in this orphanage and she goes down to the baesment and meets this janitor and I was like &quot;Oh no, this scary janitor dude is going to do something terrible.&quot; He teaches her chess!!! She is in this orphanage and everyone is just kind of nice to her. They do give her downers but the problem is that they stop giving her downers.
 
 [[Low stakes drama is where it&#39;s at]]
 </tw-passagedata><tw-passagedata pid="14" name="I finished it." tags="" position="1086.5,905.5" size="100,100">I really loved it. They are not afraid to show off the 1950&#39;s production design! They are like &quot;We paid for this. Let&#39;s see it on screen!&quot; There are all of these tracking shots of her just walking into a building and you see the building and a bunch of people in period costume as the music plays.Â 
@@ -124,7 +124,7 @@ Great street tacos.
 
 I bought some pickled cauliflower from a man on the street.
 
-[[I am a bit of a street food connoisseur myself]]</tw-passagedata><tw-passagedata pid="26" name="That sounds like it&#39;s good for your gut" tags="" position="1550.5,242.5" size="100,100">Totally.And when you belch you get to relive the enitre experience but with a new perspective of the wisdom you&#39;ve aquired in the intrim. It&#39;s like sending yourself a postcard and then getting it in a few days.Â I&#39;ve been watching Queens Gambit. 
+[[I am a bit of a street food connoisseur myself]]</tw-passagedata><tw-passagedata pid="26" name="That sounds like it&#39;s good for your gut" tags="" position="1550.5,242.5" size="100,100">Totally.And when you belch you get to relive the enitre experience but with a new perspective of the wisdom you&#39;ve acquired in the interim. It&#39;s like sending yourself a postcard and then getting it in a few days.Â I&#39;ve been watching Queens Gambit. 
 
 Have you seen it?
 
@@ -174,7 +174,7 @@ I&#39;ll let you get back to your work.
 This is the end of our story.
 
 [[Start over]]</tw-passagedata><tw-passagedata pid="36" name="Low stakes drama is where it&#39;s at" tags="" position="1124.5,1141.5" size="100,100">Yeah I watched Mindhunter and like 90% of the way through I was thinking &quot;This is not enjoyable. Why am I watching this?&quot;
-Lots of red meat and smoking. I feel like I would not feel good if I ate like that. I ate chicken tika masala five days a week for about a year and a half.
+Lots of red meat and smoking. I feel like I would not feel good if I ate like that. I ate chicken tikka masala five days a week for about a year and a half.
 
 [[how was that?]]
 [[performance art or lifstyle choice?]]
